<resources>
    <string name="app_name">Busful</string>
    <string name="useless">Useless</string>
    <string name="welcome_to_busful">Welcome to Busful!</string>
    <string name="Login">Login</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email">Email</string>
    <string name="rute">Rute</string>
    <string name="istoric">Istoric</string>
    <string name="obiective">Obiective</string>
    <string name="tracking">Tracking</string>
    <string name="preturi">Preturi</string>
    <string name="sign_out">Sign Out</string>
    <string name="spinner_entry">Selectati zona</string>
    <string name="introdu">Introdu</string>
    <string name="vizualizare_informatii">Vizualizare informatii</string>
    <string-array name="zone1">
        <item>"101A"</item>
        <item>"101B"</item>
        <item>"101R"</item>
        <item>"104A"</item>
        <item>"102R"</item>
        <item>"110"</item>
        <item>"111R"</item>
    </string-array>
    <string-array name="zone2">
        <item>"201R"</item>
        <item>"201"</item>
        <item>"202R"</item>
        <item>"202"</item>
    </string-array>
    <string-array name="zone3">
        <item>"301A"</item>
        <item>"301C"</item>
        <item>"301R"</item>
        <item>"301"</item>
        <item>"302C"</item>
        <item>"302H"</item>
        <item>"302R"</item>
    </string-array>
    <string-array name="zone4">
        <item>"401C"</item>
        <item>"401H"</item>
        <item>"401R"</item>
        <item>"410"</item>
        <item>"402A"</item>
        <item>"402I"</item>
        <item>"402R"</item>
    </string-array>
    <string-array name="zone5">
        <item>"501A"</item>
        <item>"501B"</item>
        <item>"501R"</item>
        <item>"501"</item>
        <item>"502B"</item>
        <item>"502R"</item>
        <item>"502"</item>
    </string-array>
    <string-array name="zone6">
        <item>"601B"</item>
        <item>"601C"</item>
        <item>"601E"</item>
        <item>"601F"</item>
        <item>"601G"</item>
        <item>"601H"</item>
        <item>"601R"</item>
    </string-array>
    <string-array name="zone7">
        <item>"701R"</item>
        <item>"701"</item>
    </string-array>
    <string-array name="zoneSpinner">
        <item>"Zona 1</item>
        <item>"Zona 2</item>
        <item>"Zona 3</item>
        <item>"Zona 4</item>
        <item>"Zona 5</item>
        <item>"Zona 6</item>
        <item>"Zona 7</item>
    </string-array>
    <string-array name="objlist">
        <item>"Muzeul Principia"</item>
        <item>"Muzeul Unirii"</item>
        <item>"Museikon"</item>
        <item>"Catedrala Romano-Catolica"</item>
        <item>"Catedrala Incoronarii"</item>
        <item>"Traseul celor trei Fortificatii"</item>
        <item>"Parcul Dendrologic"</item>
        <item>"Parcul de Aventura Dynamis"</item>
        <item>"Obelisc"</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="schimbare_ruta">Schimbare ruta</string>
    <string name="schimbare_pret">Schimbare pret</string>
    <string name="schimba">Schimba</string>
    <string name="longitudine">Longitudine</string>
    <string name="latitudine">Latitudine</string>
    <string name="coordonate">Coordonate</string>
    <string name="numar_autobuz">Numar autobuz</string>
    <string name="coordonate_vechi">Coordonate vechi</string>
    <string name="pret">Pret nou</string>
    <string name="Zona">Zona</string>
    <string name="pret_vechi">Pret vechi</string>
    <string name="cumpara_bilet">Cumpara bilet</string>
    <string name="numar_card">Numar card</string>
    <string name="data_expirarii">Data expirarii</string>
    <string name="cvv">CVV</string>
    <string name="nume_card">Nume card</string>
    <string name="plateste">Plateste</string>
    <string name="numar_de_telefon">Numar de telefon</string>
</resources>