<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pay">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nume_card" />

        <EditText
            android:id="@+id/nr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numar_card" />

        <EditText
            android:id="@+id/exp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data_expirarii" />

        <EditText
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cvv" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/numar_de_telefon" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:background="@color/white"
            android:text="@string/plateste"
            android:onClick="pay" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>